Unicoen.Apps.AOP/AspectCompiler/AriesParser.cs
// $ANTLR 3.3 Nov 30, 2010 12:50:56 Aries.g 2011-06-10 23:28:58

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162


using System.Collections.Generic;
using Antlr.Runtime;
using Stack = System.Collections.Generic.Stack<object>;
using List = System.Collections.IList;
using ArrayList = System.Collections.Generic.List<object>;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.3 Nov 30, 2010 12:50:56")]
[System.CLSCompliant(false)]
public partial class AriesParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASPECT", "ASPECT_BODY", "ELEMENTS", "ELEMENT", "LANGUAGE_DEPEND_BLOCK", "LANGUAGE_DECLARATION", "INTERTYPE_DECLARATION", "POINTCUT_DECLARATION", "ADVICE_DECLARATION", "TARGET_CLASS", "POINTCUT_NAME", "PARAMETERS", "PARAMETER", "PARAMETER_TYPE", "POINTCUT_DECLARATOR", "POINTCUT_TYPE", "TYPE", "IDENTIFIER_WITH_CLASS_NAME", "ADVICE_TYPE", "ADVICE_TARGET", "ADVICE_BODY", "CONTENTS", "IDENTIFIER", "POINTCUT_TYPE_ELEMENT", "ADVICE_TYPE_ELEMENT", "INTLITERAL", "STRING", "WS", "EscapeSequence", "'aspect'", "'{'", "'}'", "'}end'", "'@'", "'Java'", "'JavaScript'", "'CSharp'", "'Ruby'", "'Python'", "'C'", "':'", "'pointcut'", "';'", "'('", "')'", "'.'", "'='"
	};
	public const int EOF=-1;
	public const int T__33=33;
	public const int T__34=34;
	public const int T__35=35;
	public const int T__36=36;
	public const int T__37=37;
	public const int T__38=38;
	public const int T__39=39;
	public const int T__40=40;
	public const int T__41=41;
	public const int T__42=42;
	public const int T__43=43;
	public const int T__44=44;
	public const int T__45=45;
	public const int T__46=46;
	public const int T__47=47;
	public const int T__48=48;
	public const int T__49=49;
	public const int T__50=50;
	public const int ASPECT=4;
	public const int ASPECT_BODY=5;
	public const int ELEMENTS=6;
	public const int ELEMENT=7;
	public const int LANGUAGE_DEPEND_BLOCK=8;
	public const int LANGUAGE_DECLARATION=9;
	public const int INTERTYPE_DECLARATION=10;
	public const int POINTCUT_DECLARATION=11;
	public const int ADVICE_DECLARATION=12;
	public const int TARGET_CLASS=13;
	public const int POINTCUT_NAME=14;
	public const int PARAMETERS=15;
	public const int PARAMETER=16;
	public const int PARAMETER_TYPE=17;
	public const int POINTCUT_DECLARATOR=18;
	public const int POINTCUT_TYPE=19;
	public const int TYPE=20;
	public const int IDENTIFIER_WITH_CLASS_NAME=21;
	public const int ADVICE_TYPE=22;
	public const int ADVICE_TARGET=23;
	public const int ADVICE_BODY=24;
	public const int CONTENTS=25;
	public const int IDENTIFIER=26;
	public const int POINTCUT_TYPE_ELEMENT=27;
	public const int ADVICE_TYPE_ELEMENT=28;
	public const int INTLITERAL=29;
	public const int STRING=30;
	public const int WS=31;
	public const int EscapeSequence=32;

	// delegates
	// delegators

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				false, false, false, false, false, false
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public AriesParser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public AriesParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = null;
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();

		OnCreated();
	}
		
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}
		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return AriesParser.tokenNames; } }
	public override string GrammarFileName { get { return "Aries.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	public class aspect_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_aspect();
	partial void Leave_aspect();

	// $ANTLR start "aspect"
	// Aries.g:33:1: aspect : 'aspect' IDENTIFIER aspectBody -> ^( ASPECT IDENTIFIER aspectBody ) ;
	[GrammarRule("aspect")]
	public AriesParser.aspect_return aspect()
	{
		Enter_aspect();
		EnterRule("aspect", 1);
		TraceIn("aspect", 1);
		AriesParser.aspect_return retval = new AriesParser.aspect_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		IToken string_literal1=null;
		IToken IDENTIFIER2=null;
		AriesParser.aspectBody_return aspectBody3 = default(AriesParser.aspectBody_return);

		object string_literal1_tree=null;
		object IDENTIFIER2_tree=null;
		RewriteRuleITokenStream stream_33=new RewriteRuleITokenStream(adaptor,"token 33");
		RewriteRuleITokenStream stream_IDENTIFIER=new RewriteRuleITokenStream(adaptor,"token IDENTIFIER");
		RewriteRuleSubtreeStream stream_aspectBody=new RewriteRuleSubtreeStream(adaptor,"rule aspectBody");
		try { DebugEnterRule(GrammarFileName, "aspect");
		DebugLocation(33, 1);
		try
		{
			// Aries.g:34:2: ( 'aspect' IDENTIFIER aspectBody -> ^( ASPECT IDENTIFIER aspectBody ) )
			DebugEnterAlt(1);
			// Aries.g:34:4: 'aspect' IDENTIFIER aspectBody
			{
			DebugLocation(34, 4);
			string_literal1=(IToken)Match(input,33,Follow._33_in_aspect123);  
			stream_33.Add(string_literal1);

			DebugLocation(34, 13);
			IDENTIFIER2=(IToken)Match(input,IDENTIFIER,Follow._IDENTIFIER_in_aspect125);  
			stream_IDENTIFIER.Add(IDENTIFIER2);

			DebugLocation(34, 24);
			PushFollow(Follow._aspectBody_in_aspect127);
			aspectBody3=aspectBody();
			PopFollow();

			stream_aspectBody.Add(aspectBody3.Tree);


			{
			// AST REWRITE
			// elements: IDENTIFIER, aspectBody
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 35:3: -> ^( ASPECT IDENTIFIER aspectBody )
			{
				DebugLocation(35, 6);
				// Aries.g:35:6: ^( ASPECT IDENTIFIER aspectBody )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(35, 8);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ASPECT, "ASPECT"), root_1);

				DebugLocation(35, 15);
				adaptor.AddChild(root_1, stream_IDENTIFIER.NextNode());
				DebugLocation(35, 26);
				adaptor.AddChild(root_1, stream_aspectBody.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("aspect", 1);
			LeaveRule("aspect", 1);
			Leave_aspect();
		}
		DebugLocation(36, 1);
		} finally { DebugExitRule(GrammarFileName, "aspect"); }
		return retval;

	}
	// $ANTLR end "aspect"

	public class aspectBody_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_aspectBody();
	partial void Leave_aspectBody();

	// $ANTLR start "aspectBody"
	// Aries.g:38:1: aspectBody : '{' elements '}' -> ^( ASPECT_BODY elements ) ;
	[GrammarRule("aspectBody")]
	private AriesParser.aspectBody_return aspectBody()
	{
		Enter_aspectBody();
		EnterRule("aspectBody", 2);
		TraceIn("aspectBody", 2);
		AriesParser.aspectBody_return retval = new AriesParser.aspectBody_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		IToken char_literal4=null;
		IToken char_literal6=null;
		AriesParser.elements_return elements5 = default(AriesParser.elements_return);

		object char_literal4_tree=null;
		object char_literal6_tree=null;
		RewriteRuleITokenStream stream_35=new RewriteRuleITokenStream(adaptor,"token 35");
		RewriteRuleITokenStream stream_34=new RewriteRuleITokenStream(adaptor,"token 34");
		RewriteRuleSubtreeStream stream_elements=new RewriteRuleSubtreeStream(adaptor,"rule elements");
		try { DebugEnterRule(GrammarFileName, "aspectBody");
		DebugLocation(38, 1);
		try
		{
			// Aries.g:39:2: ( '{' elements '}' -> ^( ASPECT_BODY elements ) )
			DebugEnterAlt(1);
			// Aries.g:39:4: '{' elements '}'
			{
			DebugLocation(39, 4);
			char_literal4=(IToken)Match(input,34,Follow._34_in_aspectBody150);  
			stream_34.Add(char_literal4);

			DebugLocation(39, 8);
			PushFollow(Follow._elements_in_aspectBody152);
			elements5=elements();
			PopFollow();

			stream_elements.Add(elements5.Tree);
			DebugLocation(39, 17);
			char_literal6=(IToken)Match(input,35,Follow._35_in_aspectBody154);  
			stream_35.Add(char_literal6);



			{
			// AST REWRITE
			// elements: elements
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 40:3: -> ^( ASPECT_BODY elements )
			{
				DebugLocation(40, 6);
				// Aries.g:40:6: ^( ASPECT_BODY elements )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(40, 8);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ASPECT_BODY, "ASPECT_BODY"), root_1);

				DebugLocation(40, 20);
				adaptor.AddChild(root_1, stream_elements.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("aspectBody", 2);
			LeaveRule("aspectBody", 2);
			Leave_aspectBody();
		}
		DebugLocation(41, 1);
		} finally { DebugExitRule(GrammarFileName, "aspectBody"); }
		return retval;

	}
	// $ANTLR end "aspectBody"

	public class elements_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_elements();
	partial void Leave_elements();

	// $ANTLR start "elements"
	// Aries.g:43:1: elements : ( element )* -> ^( ELEMENTS ( element )* ) ;
	[GrammarRule("elements")]
	private AriesParser.elements_return elements()
	{
		Enter_elements();
		EnterRule("elements", 3);
		TraceIn("elements", 3);
		AriesParser.elements_return retval = new AriesParser.elements_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		AriesParser.element_return element7 = default(AriesParser.element_return);

		RewriteRuleSubtreeStream stream_element=new RewriteRuleSubtreeStream(adaptor,"rule element");
		try { DebugEnterRule(GrammarFileName, "elements");
		DebugLocation(43, 1);
		try
		{
			// Aries.g:44:2: ( ( element )* -> ^( ELEMENTS ( element )* ) )
			DebugEnterAlt(1);
			// Aries.g:44:4: ( element )*
			{
			DebugLocation(44, 4);
			// Aries.g:44:4: ( element )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, decisionCanBacktrack[1]);
				int LA1_0 = input.LA(1);

				if ((LA1_0==IDENTIFIER||LA1_0==ADVICE_TYPE_ELEMENT||LA1_0==45))
				{
					alt1=1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// Aries.g:44:4: element
					{
					DebugLocation(44, 4);
					PushFollow(Follow._element_in_elements175);
					element7=element();
					PopFollow();

					stream_element.Add(element7.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }



			{
			// AST REWRITE
			// elements: element
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 45:3: -> ^( ELEMENTS ( element )* )
			{
				DebugLocation(45, 6);
				// Aries.g:45:6: ^( ELEMENTS ( element )* )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(45, 8);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ELEMENTS, "ELEMENTS"), root_1);

				DebugLocation(45, 17);
				// Aries.g:45:17: ( element )*
				while ( stream_element.HasNext )
				{
					DebugLocation(45, 17);
					adaptor.AddChild(root_1, stream_element.NextTree());

				}
				stream_element.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("elements", 3);
			LeaveRule("elements", 3);
			Leave_elements();
		}
		DebugLocation(46, 1);
		} finally { DebugExitRule(GrammarFileName, "elements"); }
		return retval;

	}
	// $ANTLR end "elements"

	public class element_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_element();
	partial void Leave_element();

	// $ANTLR start "element"
	// Aries.g:48:1: element : ( intertypeDeclaration -> ^( ELEMENT intertypeDeclaration ) | pointcutDeclaration -> ^( ELEMENT pointcutDeclaration ) | adviceDeclaration -> ^( ELEMENT adviceDeclaration ) );
	[GrammarRule("element")]
	private AriesParser.element_return element()
	{
		Enter_element();
		EnterRule("element", 4);
		TraceIn("element", 4);
		AriesParser.element_return retval = new AriesParser.element_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		AriesParser.intertypeDeclaration_return intertypeDeclaration8 = default(AriesParser.intertypeDeclaration_return);
		AriesParser.pointcutDeclaration_return pointcutDeclaration9 = default(AriesParser.pointcutDeclaration_return);
		AriesParser.adviceDeclaration_return adviceDeclaration10 = default(AriesParser.adviceDeclaration_return);

		RewriteRuleSubtreeStream stream_adviceDeclaration=new RewriteRuleSubtreeStream(adaptor,"rule adviceDeclaration");
		RewriteRuleSubtreeStream stream_intertypeDeclaration=new RewriteRuleSubtreeStream(adaptor,"rule intertypeDeclaration");
		RewriteRuleSubtreeStream stream_pointcutDeclaration=new RewriteRuleSubtreeStream(adaptor,"rule pointcutDeclaration");
		try { DebugEnterRule(GrammarFileName, "element");
		DebugLocation(48, 1);
		try
		{
			// Aries.g:49:2: ( intertypeDeclaration -> ^( ELEMENT intertypeDeclaration ) | pointcutDeclaration -> ^( ELEMENT pointcutDeclaration ) | adviceDeclaration -> ^( ELEMENT adviceDeclaration ) )
			int alt2=3;
			try { DebugEnterDecision(2, decisionCanBacktrack[2]);
			switch (input.LA(1))
			{
			case IDENTIFIER:
				{
				alt2=1;
				}
				break;
			case 45:
				{
				alt2=2;
				}
				break;
			case ADVICE_TYPE_ELEMENT:
				{
				alt2=3;
				}
				break;
			default:
				{
					NoViableAltException nvae = new NoViableAltException("", 2, 0, input);

					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// Aries.g:49:4: intertypeDeclaration
				{
				DebugLocation(49, 4);
				PushFollow(Follow._intertypeDeclaration_in_element198);
				intertypeDeclaration8=intertypeDeclaration();
				PopFollow();

				stream_intertypeDeclaration.Add(intertypeDeclaration8.Tree);


				{
				// AST REWRITE
				// elements: intertypeDeclaration
				// token labels: 
				// rule labels: retval
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				retval.Tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

				root_0 = (object)adaptor.Nil();
				// 50:3: -> ^( ELEMENT intertypeDeclaration )
				{
					DebugLocation(50, 6);
					// Aries.g:50:6: ^( ELEMENT intertypeDeclaration )
					{
					object root_1 = (object)adaptor.Nil();
					DebugLocation(50, 8);
					root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ELEMENT, "ELEMENT"), root_1);

					DebugLocation(50, 16);
					adaptor.AddChild(root_1, stream_intertypeDeclaration.NextTree());

					adaptor.AddChild(root_0, root_1);
					}

				}

				retval.Tree = root_0;
				}

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// Aries.g:51:4: pointcutDeclaration
				{
				DebugLocation(51, 4);
				PushFollow(Follow._pointcutDeclaration_in_element213);
				pointcutDeclaration9=pointcutDeclaration();
				PopFollow();

				stream_pointcutDeclaration.Add(pointcutDeclaration9.Tree);


				{
				// AST REWRITE
				// elements: pointcutDeclaration
				// token labels: 
				// rule labels: retval
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				retval.Tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

				root_0 = (object)adaptor.Nil();
				// 52:3: -> ^( ELEMENT pointcutDeclaration )
				{
					DebugLocation(52, 6);
					// Aries.g:52:6: ^( ELEMENT pointcutDeclaration )
					{
					object root_1 = (object)adaptor.Nil();
					DebugLocation(52, 8);
					root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ELEMENT, "ELEMENT"), root_1);

					DebugLocation(52, 16);
					adaptor.AddChild(root_1, stream_pointcutDeclaration.NextTree());

					adaptor.AddChild(root_0, root_1);
					}

				}

				retval.Tree = root_0;
				}

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// Aries.g:53:4: adviceDeclaration
				{
				DebugLocation(53, 4);
				PushFollow(Follow._adviceDeclaration_in_element228);
				adviceDeclaration10=adviceDeclaration();
				PopFollow();

				stream_adviceDeclaration.Add(adviceDeclaration10.Tree);


				{
				// AST REWRITE
				// elements: adviceDeclaration
				// token labels: 
				// rule labels: retval
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				retval.Tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

				root_0 = (object)adaptor.Nil();
				// 54:3: -> ^( ELEMENT adviceDeclaration )
				{
					DebugLocation(54, 6);
					// Aries.g:54:6: ^( ELEMENT adviceDeclaration )
					{
					object root_1 = (object)adaptor.Nil();
					DebugLocation(54, 8);
					root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ELEMENT, "ELEMENT"), root_1);

					DebugLocation(54, 16);
					adaptor.AddChild(root_1, stream_adviceDeclaration.NextTree());

					adaptor.AddChild(root_0, root_1);
					}

				}

				retval.Tree = root_0;
				}

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("element", 4);
			LeaveRule("element", 4);
			Leave_element();
		}
		DebugLocation(55, 1);
		} finally { DebugExitRule(GrammarFileName, "element"); }
		return retval;

	}
	// $ANTLR end "element"

	public class languageDependBlock_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_languageDependBlock();
	partial void Leave_languageDependBlock();

	// $ANTLR start "languageDependBlock"
	// Aries.g:57:1: languageDependBlock : languageDeclaration '{' contents '}end' -> ^( LANGUAGE_DEPEND_BLOCK languageDeclaration contents ) ;
	[GrammarRule("languageDependBlock")]
	private AriesParser.languageDependBlock_return languageDependBlock()
	{
		Enter_languageDependBlock();
		EnterRule("languageDependBlock", 5);
		TraceIn("languageDependBlock", 5);
		AriesParser.languageDependBlock_return retval = new AriesParser.languageDependBlock_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		IToken char_literal12=null;
		IToken string_literal14=null;
		AriesParser.languageDeclaration_return languageDeclaration11 = default(AriesParser.languageDeclaration_return);
		AriesParser.contents_return contents13 = default(AriesParser.contents_return);

		object char_literal12_tree=null;
		object string_literal14_tree=null;
		RewriteRuleITokenStream stream_36=new RewriteRuleITokenStream(adaptor,"token 36");
		RewriteRuleITokenStream stream_34=new RewriteRuleITokenStream(adaptor,"token 34");
		RewriteRuleSubtreeStream stream_contents=new RewriteRuleSubtreeStream(adaptor,"rule contents");
		RewriteRuleSubtreeStream stream_languageDeclaration=new RewriteRuleSubtreeStream(adaptor,"rule languageDeclaration");
		try { DebugEnterRule(GrammarFileName, "languageDependBlock");
		DebugLocation(57, 1);
		try
		{
			// Aries.g:58:2: ( languageDeclaration '{' contents '}end' -> ^( LANGUAGE_DEPEND_BLOCK languageDeclaration contents ) )
			DebugEnterAlt(1);
			// Aries.g:58:4: languageDeclaration '{' contents '}end'
			{
			DebugLocation(58, 4);
			PushFollow(Follow._languageDeclaration_in_languageDependBlock249);
			languageDeclaration11=languageDeclaration();
			PopFollow();

			stream_languageDeclaration.Add(languageDeclaration11.Tree);
			DebugLocation(58, 24);
			char_literal12=(IToken)Match(input,34,Follow._34_in_languageDependBlock251);  
			stream_34.Add(char_literal12);

			DebugLocation(58, 28);
			PushFollow(Follow._contents_in_languageDependBlock253);
			contents13=contents();
			PopFollow();

			stream_contents.Add(contents13.Tree);
			DebugLocation(58, 37);
			string_literal14=(IToken)Match(input,36,Follow._36_in_languageDependBlock255);  
			stream_36.Add(string_literal14);



			{
			// AST REWRITE
			// elements: languageDeclaration, contents
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 59:3: -> ^( LANGUAGE_DEPEND_BLOCK languageDeclaration contents )
			{
				DebugLocation(59, 6);
				// Aries.g:59:6: ^( LANGUAGE_DEPEND_BLOCK languageDeclaration contents )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(59, 8);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(LANGUAGE_DEPEND_BLOCK, "LANGUAGE_DEPEND_BLOCK"), root_1);

				DebugLocation(59, 30);
				adaptor.AddChild(root_1, stream_languageDeclaration.NextTree());
				DebugLocation(59, 50);
				adaptor.AddChild(root_1, stream_contents.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("languageDependBlock", 5);
			LeaveRule("languageDependBlock", 5);
			Leave_languageDependBlock();
		}
		DebugLocation(60, 1);
		} finally { DebugExitRule(GrammarFileName, "languageDependBlock"); }
		return retval;

	}
	// $ANTLR end "languageDependBlock"

	public class languageDeclaration_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_languageDeclaration();
	partial void Leave_languageDeclaration();

	// $ANTLR start "languageDeclaration"
	// Aries.g:62:1: languageDeclaration : '@' languageType -> ^( LANGUAGE_DECLARATION languageType ) ;
	[GrammarRule("languageDeclaration")]
	private AriesParser.languageDeclaration_return languageDeclaration()
	{
		Enter_languageDeclaration();
		EnterRule("languageDeclaration", 6);
		TraceIn("languageDeclaration", 6);
		AriesParser.languageDeclaration_return retval = new AriesParser.languageDeclaration_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		IToken char_literal15=null;
		AriesParser.languageType_return languageType16 = default(AriesParser.languageType_return);

		object char_literal15_tree=null;
